# pafi

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  MANIFEST.in  README.md  TODO  TUTORIAL.md  blot  lammps.cmake  lammps_options.cmake  note  pafi_lammps_Aug18.patch  pyproject.toml  requirements.txt  setup.cfg  setup.py  unittests.py  user-pafi_lammps_Aug18.patch
CMakeModules/: FindLAMMPS.cmake
core/: Boundary.cpp  Boundary.hpp  Constants.hpp  ConstantsTypes.hpp  CustomClasses.hpp  CustomSimulator.cpp  CustomSimulator.hpp  CustomTypes.hpp  File.hpp  GeneralGatherer.hpp  GeneralSimulator.cpp  GeneralSimulator.hpp  GenericGatherer.hpp  GenericSimulator.cpp  GenericSimulator.hpp  LAMMPSSimulator.cpp  LAMMPSSimulator.hpp  Manager.hpp  Master.hpp  Parser.cpp  Parser.hpp  Spline.cpp  Spline.hpp  Tester.hpp  Utils.hpp
doc/: INSTALL.md  STATIC_MAKE.md  TIPS.md  TUTORIAL.md  lammps_options.cmake
example/: README.md  alt_sample_plot.py  config.xml  run.sh  sample_plot.py
example/path_test/: config.xml  run.sh
example/pathway_test/: config.xml  run.sh
example/sample_run/: alt_sample_plot.py  config.xml  run.sh  sample_plot.py
examples/: CustomUsageExamples.py  PlottingExample-1.ipynb  PlottingExample-2.ipynb  PlottingExample-3.ipynb  PlottingExamples.ipynb  README.md  UsageExamples.py  input_python.py  input_python_custom.py  input_python_expansion.py  input_python_shear.py  input_xml.py  post_processing.py  python_input.py  standard_input.py
examples/configuration_files/: CompleteConfiguration_REAL.xml  CompleteConfiguration_TEST.xml  CustomConfiguration_TEST.xml  PartialConfiguration_REAL.xml  PartialConfiguration_TEST.xml
examples/dumps/: config_0.xml  pafi_data_0.csv
examples/expansion_output/: config_0.xml  pafi_data_0.csv
examples/shear_output/: config_0.xml  pafi_data_0.csv
examples/standard/: .gitignore  Process-PAFI-Results.ipynb  config.xml
examples/standard/.ipynb_checkpoints/: Process-PAFI-Results-checkpoint.ipynb
examples/standard/dumps/: pafi_data_output_0.csv  pafi_data_output_1.csv  params_1.csv
examples/vac_output/: config_2.xml  pafi_data_0.csv  pafi_data_2.csv
examples/xml/: CompleteConfiguration_GSFE.xml  CompleteConfiguration_REAL.xml
pafi/: StandardGatherer.hpp  StandardSimulator.hpp  __init__.py  check_dependencies.py  main.cpp  main.hpp  pafi-analyze.cpp  pafi-lammps-path.cpp  pafi-lammps-preparation-2.cpp  pafi-lammps-preparation.cpp  pafi-path-test.cpp  pafi.cpp  pafi.hpp  pafi.py  parser.py  plots.py  post_processing.py  run_tests.py
pafi-custom/: CustomGatherer.hpp  CustomSimulator.hpp  pafi-path-test.cpp  pafi.cpp
pafi-lammps-path/: main.cpp
pafi-main/: pafi-lammps-preparation.cpp  pafi-path-test.cpp  pafi.cpp
pafi-standard/: pafi-lammps-preparation.cpp
pafi-test/: pafi-lammps-preparation.cpp  pafi-path-test.cpp  pafi-test.hpp  pafi.hpp
pafi-ti/: Gatherer.hpp  GathererSimulator.hpp  LambdaGatherer.hpp  LambdaSimulator.hpp  Simulator.hpp  main.cpp  pafi-ti.cpp  pafi-ti.hpp
pafi/managers/: BaseManager.py  PAFIManager.py
pafi/parsers/: BaseParser.py  PAFIParser.py
pafi/results/: BaseGatherer.py  Gatherer.py  ResultsHolder.py  ResultsProcessor.py
pafi/tests/: test_pafi.py
pafi/tests/configuration_files/: CompleteConfiguration_TEST.xml  PartialConfiguration_REAL.xml  PartialConfiguration_TEST.xml
pafi/workers/: BaseWorker.py  LAMMPSWorker.py  PAFILAMMPSWorker.py  PAFIWorker.py
prepare/: prepare.cpp  prepare.hpp
python/: pafi.py  plot.py
run/: config.xml  run.sh
snap_example/: W.snapcoeff  W.snapparam  config.xml  lml_Fe.pot  pafi
snap_example/dumps/: params_0  params_2  params_4  raw_data_output_1  raw_data_output_2  raw_data_output_3  raw_data_output_4
snap_example/md/: Fe.snapcoeff  convert.py  log.lammps  test.lammps  test.py
src/: Boundary.hpp  GeneralSimulator.hpp  LAMMPSSimulator.hpp  Parser.hpp  Simulator.hpp  Spline.hpp  integrator.hpp  pafi.cpp  pafi.hpp
testing/: Gatherer.hpp  Simulator.hpp  run_tests.py
tests/: log.lammps  pafi-path-test.cpp  unittests.py
tests/configuration_files/: CompleteConfiguration_REAL.xml
ti_example/: config.xml
utils/: pafi-lammps-preparation.cpp  pafi-path-test.cpp  pafi-path-test.hpp
