[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pafi"
version = "0.9.8"
description = "PAFI: A Python package for the evaluation of free energy barriers beyond Harmonic TST using LAMMPS"
authors = [
    { name="TD Swinburne", email="thomas.swinburne@cnrs.fr" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "mpi4py>=3.1",
    "matplotlib>=3.4",
    "pandas>=1.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2,<7.0",
]

[project.urls]
Homepage = "https://github.com/tomswinburne/pafi"
Documentation = "https://github.com/tomswinburne/pafi"
Source = "https://github.com/tomswinburne/pafi"

[project.scripts]
pafi-check-deps = "pafi.check_dependencies:main"
pafi-run-tests = "pafi.run_tests:main"  # Use our custom test runner

[tool.setuptools.package-data]
pafi = ["README.md"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
